# beagleboard_navstack

./: README
data_robot/test/: CMakeLists.txt
data_robot/test/application_services/: TickVelocityCommandServiceTests.cpp
data_robot/test/core/: EncoderCountsReaderTests.cpp  RollOverHelpersTests.cpp
data_robot/test/message_endpoints/: .EncoderCountsEndpointTests.cpp.swp
diff_drive/src/ui/: CMakeLists.txt  DiffDriveI2CNode.cpp  DiffDriveNode.cpp
diff_drive/test/: CMakeLists.txt
diff_drive/test/application_services/: BaseModelSetupServiceTests.cpp  OdometryReportingServiceTests.cpp  TwistCommandServiceTests.cpp
diff_drive/test/core/: .EncoderCountsReaderTests.cpp.swp  BaseModelTests.cpp  EncoderCountsReaderTests.cpp  OdometryIntegratorTests.cpp  TwistConverterTests.cpp  TwistReaderTests.cpp
diff_drive/test/data_repositories/: BaseModelRepositoryTests.cpp
diff_drive/test/data_repositories/test_doubles/: BaseModelRepositoryStub.hpp
diff_drive/test/message_endpoints/: .EncoderCountEndpointTests.cpp.swp  EncoderCountEndpointTests.cpp  OdometryEndpointTests.cpp  TickVelocityEndpointTests.cpp  TwistEndpointTests.cpp
diff_drive/test/message_endpoints/test_doubles/: EncoderCountEndpointStub.hpp  EncoderCountsEndpointStub.hpp  OdometryEndpointStub.hpp  TickVelocityEndpointStub.hpp  TwistEndpointStub.hpp
ros/data_robot/: CMakeLists.txt  manifest.xml  package.xml
ros/data_robot/launch/: data_robot.launch  joystick_teleop.launch  keyboard_teleop.launch  robot_base.launch  urdf_joystick_teleop.launch
ros/data_robot/msg/: Bumpers.msg  PowerState.msg
ros/data_robot/src/: CMakeLists.txt
ros/data_robot/src/application_services/: BaseTelemetryReportingService.cpp  BaseTelemetryReportingService.hpp  BumpersProcessorSetupService.cpp  BumpersProcessorSetupService.hpp  CMakeLists.txt  EncoderCountsReportingService.hpp  FrontTelemetryReportingService.cpp  FrontTelemetryReportingService.hpp  TickVelocityCommandService.cpp  TickVelocityCommandService.hpp
ros/data_robot/src/core/: .BusRequest.cpp.swp  BaseTelemetryReader.cpp  BaseTelemetryReader.hpp  BumpersProcessor.cpp  BumpersProcessor.hpp  BusAddresses.h  BusAddresses.hpp  BusRequest.cpp  BusRequest.hpp  CMakeLists.txt  EncoderCountsProcessor.cpp  EncoderCountsProcessor.hpp  FrontTelemetryReader.cpp  FrontTelemetryReader.hpp  Log.hpp  MotorVelocityRequest.cpp  PowerStateProcessor.cpp  PowerStateProcessor.hpp  RollOverHelpers.c  Telemetry.hpp  TickVelocityForwarder.cpp  TickVelocityForwarder.hpp
ros/data_robot/src/data_repositories/: BumperIndexesRepository.cpp  BumperIndexesRepository.hpp  CMakeLists.txt
ros/data_robot/src/message_endpoints/: BumpersEndpoint.cpp  BumpersEndpoint.hpp  BumpersPublisherEndpoint.cpp  BumpersPublisherEndpoint.hpp  CMakeLists.txt  EncoderCountsEndpoint.cpp  EncoderCountsEndpoint.hpp  EncoderCountsPublisherEndpoint.cpp  EncoderCountsPublisherEndpoint.hpp  I2CBusEndpoint.hpp  I2CBusRequestProcessorEndpoint.cpp  I2CBusRequestProcessorEndpoint.hpp  LogPublisherEndpoint.cpp  LogPublisherEndpoint.hpp  PowerStateEndpoint.cpp  PowerStateEndpoint.hpp  PowerStatePublisherEndpoint.cpp  PowerStatePublisherEndpoint.hpp  TickVelocityEndpoint.cpp  TickVelocitySubscriberEndpoint.cpp  TickVelocitySubscriberEndpoint.hpp  i2c-api.c  i2c-api.h  i2c_api.c  i2c_api.h
ros/data_robot/src/ui/: BumperWander.cpp  CMakeLists.txt  DataRobotNode.cpp  FigureEights.cpp  StaticCommand.cpp
ros/data_robot/test/: CMakeLists.txt  TestRunner.cpp  ros_message_endpoints.test
ros/data_robot/test/application_services/: EncoderCountsReportingServiceTests.cpp  TickVelocityCommandServiceTests.cpp
ros/data_robot/test/core/: BaseTelemetryReaderTests.cpp  BumpersProcessorTests.cpp
ros/data_robot/test/message_endpoints/: EncoderCountsEndpointTests.cpp  EncoderCountsPublisherEndpointTests.cpp  I2CBusEndpointTests.cpp  I2CBusRequestProcessorEndpointTests.cpp  TickVelocityEndpointTests.cpp  TickVelocitySubscriberEndpointTests.cpp
ros/diff_drive/test/: CMakeLists.txt  TestRunner.cpp
ros/diff_drive/test/application_services/: BaseModelSetupServiceTests.cpp  OdometryReportingServiceTests.cpp  TwistCommandServiceTests.cpp
ros/diff_drive/test/core/: BaseModelTests.cpp  OdometryIntegratorTests.cpp  TwistConverterTests.cpp
ros/diff_drive/test/data_repositories/: BaseModelRepositoryTests.cpp
ros/diff_drive/test/message_endpoints/: EncoderCountsEndpointTests.cpp  EncoderCountsSubscriberEndpointTests.cpp  MovementStatusEndpointTests.cpp  MovementStatusPublisherEndpointTests.cpp  OdometryEndpointTests.cpp  OdometryPublisherEndpointTests.cpp  TickVelocityEndpointTests.cpp  TickVelocityPublisherEndpointTests.cpp  TwistSubscriberEndpointTests.cpp
ros/diff_drive_calibrated/src/ui/: CMakeLists.txt  DiffDriveNode.cpp
ros/differential_drive/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/differential_drive/cfg/: BaseGeometry.cfg  DifferentialParameters.cfg  MovementStatusParameters.cfg
ros/differential_drive/launch/: differential_drive.launch  differential_drive_w_stasis.launch  joystick_teleop.launch  keyboard_teleop.launch
ros/differential_drive/msg/: EncoderCounts.msg  MovementStatus.msg
ros/differential_drive/src/application_services/: BaseModelSetupService.cpp  BaseModelSetupService.hpp  CMakeLists.txt  OdometryReportingService.cpp  OdometryReportingService.hpp  ParameterSetupService.cpp  ParameterSetupService.hpp  ParametersSetupService.cpp  ParametersSetupService.hpp  TwistCommandService.cpp  TwistCommandService.hpp
ros/differential_drive/src/core/: BaseModel.cpp  BaseModel.hpp  CMakeLists.txt  OdometryIntegrator.cpp  OdometryIntegrator.hpp  TwistConverter.cpp  TwistConverter.hpp
ros/differential_drive/src/data_repositories/: BaseModelRepository.cpp  BaseModelRepository.hpp  CMakeLists.txt  DifferentialParametersRepository.cpp  DifferentialParametersRepository.hpp  MovementStatusParametersRepository.cpp  MovementStatusParametersRepository.hpp
ros/differential_drive/src/message_endpoints/: AsyncSpinnerWrapper.cpp  CMakeLists.txt  (+11 more)
ros/differential_drive/test/: CMakeLists.txt  TestRunner.cpp  differential_drive.test
(+638 files in other folders)
